--- a/media/select_root.html
+++ b/media/select_root.html
@@ -6,7 +6,7 @@
 <div class="notesHeader" id="rootblock">
     
 
-    <form method="POST" action="{{url_for('root', key=key, root=root)}}">
+    <form method="POST" action="{{url_for('root', key=key)}}">
 
 
         <div class="row">
